(lang dune 3.8)

(name alloca)

(generate_opam_files true)

(source
 (github artempyanykh/alloca))

(authors "Artem Pianykh")

(maintainers "Artem Pianykh")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name alloca)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
